Fixed examples for now api change

--- a/examples/custom map-op.ipynb
+++ b/examples/custom map-op.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Most scientific operations can be expressed as map-assemble operations. Or, at least doing the numerical calculations for the PDE discretizations. Perhaps we need to do something more complicated and application specific. Having to copy-and-paste assemble.c for every operation is not viable. There is filter.c, which does a hypergraph filtering operation. Cornflakes offers a Python exposure of the map-assemble loop."
    ]
@@ -11,7 +14,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -22,7 +27,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "This is the trivial setup from the first example."
    ]
@@ -31,7 +39,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -49,7 +59,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The pieces to the Assemble operation are exposed in the Python interface. It's way slower than calling Assemble, but it lets you define custom operations on the map-assemble framework. Iteration over the Hypergraph will give you the processor's partition of it. It's then your responsibility to make sure the operations you do run in parallel."
    ]
@@ -58,7 +71,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1078,7 +1093,7 @@
    ],
    "source": [
     "for e in H:\n",
-    "    kerin = cf.Assemble.Collect2(husk_spring.kernel_spring_force,e,data)\n",
+    "    kerin = cf.Collect(husk_spring.kernel_spring_force,e,data)\n",
     "    kerout = cf.cflib.call_kernel(husk_spring.kernel_spring_force,len(e),kerin)\n",
     "    # You can do whatever you want here right now!\n",
     "    # E.g., maybe you want to modify the graph here. The hypergraph \n",
@@ -1090,7 +1105,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
