--- a/examples/rkpm/rkpm_study.ipynb
+++ b/examples/rkpm/rkpm_study.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
@@ -46,7 +46,7 @@
     "Nside = 25\n",
     "L = 1.0\n",
     "params = np.array([1.0])\n",
-    "Ndesired = 4\n",
+    "Ndesired = 8\n",
     "cutoff = 2*L"
    ]
   },
@@ -72,7 +72,7 @@
    "source": [
     "X = cf.PP.init_grid(Nside,Nside, [-L,-L], [2*L,0.0], [0.0,2*L])\n",
     "# Make the background mesh\n",
-    "GW,GX = util.GaussQuadGrid(Nside-1,Nside-1, 2,2, [-L,-L], 2*L,2*L)\n",
+    "GW,GX = util.GaussQuadGrid(Nside-1,Nside-1, 3,3, [-L,-L], 2*L,2*L)\n",
     "Npt = X.shape[0]\n",
     "u = np.zeros(Npt)\n",
     "# Mark the edges\n",
@@ -115,6 +115,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "The data dictionary for the variational problem."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
@@ -143,10 +153,10 @@
    "outputs": [],
    "source": [
     "def eval_rkpm(X,u, y, grad=False):\n",
-    "    H,r = cf.Graphers.Build_Proximity_Graph_Given_Length(X,Ndesired, cutoff , y)\n",
-    "    #r[:] = SupR\n",
+    "    #H,r = cf.Graphers.Build_Proximity_Graph_Given_Length(X,Ndesired, cutoff , y)\n",
+    "    r = SupR*np.ones(y.shape[0])\n",
     "    H = cf.Graphers.Build_Proximity_Graph_Variable(X,r, y)\n",
-    "    # H = cf.Graphers.Build_Proximity_Graph_Uniform(X,SupR, y)\n",
+    "    #H = cf.Graphers.Build_Proximity_Graph_Uniform(X,SupR, y)\n",
     "    if grad:\n",
     "        ke = hr.kernel_interp_grad_u\n",
     "    else:\n",
@@ -162,32 +172,36 @@
     "def eval_shape(X, i, sample=100, grad=False):\n",
     "    a = np.zeros(X.shape[0])\n",
     "    a[i] = 1.0\n",
-    "    xprobe = cf.PP.init_grid(100,100,[-L,-L],[2*L,0],[0,2*L])\n",
+    "    xprobe = cf.PP.init_grid(sample,sample,[-L,-L],[2*L,0],[0,2*L])\n",
     "    shapei = eval_rkpm(X,a, xprobe, grad)\n",
-    "    return xprobe,shapei"
+    "    return xprobe,shapei\n",
+    "def eval_rkpm_grid(X, ui, sample=100, grad=False):\n",
+    "    xprobe = cf.PP.init_grid(sample,sample,[-L,-L],[2*L,0],[0,2*L])\n",
+    "    u = eval_rkpm(X,ui, xprobe, grad)\n",
+    "    return xprobe,u"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "_x,_u=eval_shape(X,33)\n",
+    "#_x,_u=eval_shape(X,33)\n",
     "#util.surfplot(_x,_u)\n",
     "#util.surfplotly(_x,_u)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
@@ -201,47 +215,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true,
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/python2.7/dist-packages/scipy/sparse/linalg/dsolve/linsolve.py:151: MatrixRankWarning:\n",
-      "\n",
-      "Matrix is exactly singular\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAD7CAYAAABKWyniAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADh5JREFUeJzt3W+oZPV9x/H312xKjMIiEneD26ylRQsBWWgrNAp3QkMJ\nJWARalNLcZtgfCCtkD6I8cmdG/JA82DBCj7QqGiINIlgNYWqCeEYDJjYNJv6L26hXdO03quUVGqJ\nkLDfPpjZdfbu/Lvz55wz83u/YNi555y55+txPvf8+c33TGQmkspyXtMFSKqfwZcKZPClAhl8qUAG\nXyqQwZcKVFvwI+LjEfGTiDgREZ+ra73jRMTJiPhxRPwoIn7QYB33R8RORPzLwLSLIuLpiHg1Ip6K\niP0tqGkzIn4WEf/cf3y85poORcR3IuKliHghIv66P72xbTWkpr/qT290W00SdYzjR8R5wAngD4D/\nAp4HPpmZP1n6ysfX9W/A72Tmzxuu4xrgbeDhzLyyP+1O4L8z80v9P5QXZeZtDde0CfxvZh6rq45d\nNR0EDmbm8Yi4EPghcC3wlzS0rcbU9Kc0uK0mqWuPfxXwr5n5Wmb+Evg7ehunaUELTncy81lg9x+f\na4GH+s8fAv64BTVBb5s1IjO3M/N4//nbwCvAIRrcViNqurQ/u7FtNUldb/pLgf8Y+PlnvLtxmpTA\nUxHxfETc1HQxu1ySmTvQe3MBlzRcz2m3RMTxiPhy3acfgyLiMuAI8BxwoA3baqCm7/cntWJbDdP4\n3q5hV2fm7wJ/RO9/0jVNFzRGGz5bfQ/wm5l5BNgGmjrkvxB4FLi1v5fdvW1q31ZDamrFthqlruD/\nJ/ChgZ8P9ac1KjNf7//7JvAYvVOSttiJiANw5jzyjYbrITPfzHcvCt0H/F7dNUTEPnoB+0pmPt6f\n3Oi2GlZTG7bVOHUF/3ngtyLicET8GvBJ4Ima1j1URLy//1eaiLgA+EPgxSZL4uxzwieAo/3nNwKP\n735BDc6qqR+q066jme31APByZt41MK3pbXVOTS3ZViPVclUfesN5wF30/tjcn5l31LLi0fX8Br29\nfAL7gK82VVNEPAJ0gIuBHWAT+HvgG8CvA68B12fm/zRc00fpncOeAk4CN58+t66ppquB7wIv0Pv/\nlsDtwA+Ar9PAthpT0w00uK0mqS34ktqj9It7UpEMvlQggy8VyOBLBZor+G1svJE02cxX9adtvIkI\nhw2khmTm0H6Befb4e2i8yYHH5q6fk42NTTKzscfmZrPrt6b1qqktdY0zT/Db2ngjaYJ99aymO/D8\nZD2rlApTVRVVVU217DzB30PjTXfgeTXHKpej0+k0XcI5rGk6bawJmqmr0+mctd6tra2Ry85zce89\nwKv0Lu69Tu/z0n+Wma/sWi4ndUlubHSpqu5MdUgaLiLIERf35vqs/jSNN6ODfwfwDgD795/kyJHL\nhq7j8svfx7331nbHKWltjAv+XOf4mfkkcMVsr36H06cAb70FzzwzarnubL9e0ki1XNzb2OieM+34\n8ZO89VYda5e0Wy3BH3b+3ul0x+zlJS2Tn9WXCmTwpQIZfKlANX1ybxa94b7jx0/S6XRHLuVwn7R3\nLQ5+b7hv/FAfONwn7Z2H+lKBGtvjX375+xi3t3acX1qexoI/6bzccX5peTzUlwpk8KUCGXypQC0e\nzhvn3ZbeceP8jvFLw61o8G3plebR2uCPG+5zqE+aT2uDP+4Q3aE+aT5e3JMKZPClAhl8qUCtPcef\nnUN90iRrGHyH+qRJPNSXCrSSe3zH+KX5rGTwHeOX5uOhvlQggy8VyOBLBZrrHD8iTgJvAaeAX2bm\nVYsoarm8bbc078W9U0AnM3++iGLq4W27pXmDH7TsdMG790qTzRv8BJ6KiATuzcz7FlDTXLx7rzTZ\nvMG/OjNfj4gPAN+KiFcy89lFFCZpeeYKfma+3v/3zYh4DLgKOCf43W73zPNOp0On05lntZKGqKqK\nqqqmWjYyc6aVRMT7gfMy8+2IuAB4GtjKzKd3LZezrmMZeof63YnLbWx0qarJy0ltFRFkZgybN88e\n/wDwWP/8fh/w1d2hXz229KoMMwc/M/8dOLLAWlrAll6VoVVDcZLqsZLdefOwpVcqMPi29Eoe6ktF\nMvhSgYo71J+PnX1aDwZ/T+zs03rwUF8qkHv8Abb0qhQGf4AtvSqFh/pSgQy+VCCDLxXIc/yFsaVX\nq8PgL4wtvVodBn8P7OzTujD4e2Bnn9aFF/ekAhl8qUAGXyqQ5/i1saVX7WHwa2NLr9rDQ32pQO7x\nF8SWXq0Sg78gtvRqlXioLxXI4EsFMvhSgSae40fE/cAngJ3MvLI/7SLga8Bh4CRwfWZ66WpmtvSq\nXtNc3HsQuBt4eGDabcC3M/NLEfE54PP9aZqJLb2q18TgZ+azEXF41+RrgY3+84eACoM/li29apNZ\nh/MuycwdgMzcjohLFljTWrKlV22yqIt7uaDfI6kGs+7xdyLiQGbuRMRB4I1xC3e73TPPO50OnU5n\nxtVKGqWqKqqqmmrZaYMf/cdpTwBHgTuBG4HHx714MPiSlmP3TnVra2vkstMM5z0CdICLI+KnwCa9\n8advRMSngNeA6+eqWBPY0qvFmuaq/g0jZn1swbVoJFt6tVh+ck8qkN15LWBLr+pm8FvAll7VzUN9\nqUAGXyqQwZcK5Dn+yrOlV3tn8FeeLb3aO4O/Amzp1aIZ/BVgS68WzYt7UoEMvlQggy8VyHP8teZQ\nn4Yz+GvNoT4N56G+VCD3+CvOMX7NwuCvOMf4NQsP9aUCGXypQB7qF82795bK4BfNu/eWykN9qUDu\n8deYd+/VKAZ/jXn3Xo3iob5UIIMvFcjgSwXyHF8j2NK7zqb5muz7gU8AO5l5ZX/aJnAT8EZ/sdsz\n88mlVakG2NK7zqbZ4z8I3A08vGv6scw8tviSVBc7+8o1MfiZ+WxEHB4yK5ZQj2pkZ1+55rm4d0tE\nHI+IL0fE/oVVJGnpZr24dw/whczMiPgicAz49KiFu93umeedTodOpzPjaiWNUlUVVVVNtexMwc/M\nNwd+vA/45rjlB4MvaTl271S3trZGLjtt8IOBc/qIOJiZ2/0frwNe3HOVWnG29K6yaYbzHgE6wMUR\n8VNgE/hoRBwBTgEngZuXWKNayZbeVTbNVf0bhkx+cAm1SKqJn9zTULb0rjeDr6Fs6V1vNulIBTL4\nUoEMvlQgz/G1BLb0tp3B1xLY0tt2Bl8zsaV3tRl8zcSW3tXmxT2pQAZfKpDBlwrkOb4aYEtv0wy+\nGmBLb9M81JcK5B5fC2dLb/sZfC2cLb3t56G+VCCDLxXI4EsF8hxfLWNLbx0MvlrGlt46GHzVzpbe\n5hl81c6W3uZ5cU8qkMGXCmTwpQJ5jq8V4lDfokzzbbmHgIeBA/S+Hfe+zPzbiLgI+BpwmN435l6f\nmV6P1RI51Lco0xzq/wr4bGZ+GPh94JaI+G3gNuDbmXkF8B3g88srU9IiTfM12dvAdv/52xHxCnAI\nuBbY6C/2EFDR+2Mgzcwx/nrs6Rw/Ii4DjgDPAQcycwd6fxwi4pKFV6fiOMZfj6mDHxEXAo8Ct/b3\n/Llrkd0/n9Htds8873Q6dDqdvVUpaaKqqqiqaqplpwp+ROyjF/qvZObj/ck7EXEgM3ci4iDwxqjX\nDwZf0nLs3qlubW2NXHbacfwHgJcz866BaU8AR/vPbwQe3/0iSe00zXDe1cCfAy9ExI/oHdLfDtwJ\nfD0iPgW8Bly/zEKlybxt97Smuar/PeA9I2Z/bLHlSPPwtt3T8pN7WhnevXdxDL5WhnfvXRybdKQC\nGXypQAZfKpDn+CqELb2DDL4KYUvvIA/1pQK5x9fasKV3egZfa8OW3ul5qC8VyOBLBfJQXwJK6+wz\n+BJQWmefh/pSgdzjqwi29J7N4KsItvSezUN9qUAGXyqQwZcK5Dm+NNH6tfQafGmi9WvpNfgS5XX2\nGXyJ8jr7vLgnFcjgSwUy+FKBPMeX5rZ6Lb3TfFvuIeBh4ABwCrg3M++OiE3gJuCN/qK3Z+aTS6tU\naq3Va+mdZo//K+CzmXk8Ii4EfhgR3+rPO5aZx5ZXnqRlmOZrsreB7f7ztyPiFeDS/uxYYm1SK6xj\nS++ezvEj4jLgCPB94Brgloj4C+CfgL/JzBX7z5cmW8eW3qmD3z/MfxS4tb/nvwf4QmZmRHwROAZ8\nethru93umeedTodOpzNPzZKGqKqKqqqmWjYyc/JCEfuAfwD+MTPvGjL/MPDNzLxyyLycZh3Squrt\n8bsTl9vY6FJVk5dblIggM4eejk87jv8A8PJg6CPi4MD864AXZy9RUp0m7vEj4mrgu8ALQPYftwM3\n0DvfPwWcBG7OzJ0hr8+Njc1zfu+rr77EL35xAQDnn38eV1zxoaHzx80b9drT2jRuqvX1wQ/+Cdvb\nHx4x9yWg915973v/j4985Ozllvk+H7fHJzOX+gAScshjc8T0aeZPem3vsbGxmdKy7d9/4xzv1eW9\nz3vxHp5LP7Irzen881cvRqtXsdQyow7B28zgSwUy+FKBDL5UIIMvFcjgSwUy+FKBarkDz8ZG95xp\nvU8lHQXGfXLv6Nh5o157Wq+dUlqucW27bX2fT9WkMw+bdKRmLKJJR9IaMfhSgQy+VCBvry016DOf\nuYMTJ94ZOm+Z7ecGX2rQiRPvjLl7T5fBb+nd3h71W0a9fjQP9aUCGXypQAZfKpDBlwpk8KUCtfYj\nu7MOc3j3Xq2S8XfofQ44fRf784DB9+P4u/cCPPPMVrN32Z3Fxsasdx/17r1aHbPfoXea96p32ZU0\nwOBLDWrq1twGX2pQU7fmrj34036bZ72qpgs4Rxu3kzVNr611nWbwAYM/HWuaXlvrOs1DfalABl8q\nUC0f4FnqCiSNlCM+wLP04EtqHw/1pQIZfKlABl8qkMGXCmTwpQL9P8VNEHcOC55tAAAAAElFTkSu\nQmCC\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x7fbf709fba50>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cf.Apply_BC(dm_ptsca.Get_List(boundary),-ubc,\n",
     "            K,R)\n",
     "Du = splin.spsolve(K,R)\n",
     "u = u - Du[:Npt]\n",
-    "plt.spy(K[0:30,0:30])\n",
-    "plt.show()"
+    "#plt.spy(K[0:100,0:100])\n",
+    "#plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "_x,_u=eval_rkpm_grid(X,u)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -249,21 +255,32 @@
    },
    "outputs": [],
    "source": [
-    "Nbc"
+    "#util.surfplot(_x,-_u)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.067847119810067344"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "R"
+    "_u.max()"
    ]
   },
   {
