Maybe the spaces project them

--- a/examples/rkpm/rkpm_new.ipynb
+++ b/examples/rkpm/rkpm_new.ipynb
@@ -240,17 +240,15 @@
    },
    "source": [
     "At every point $y$, the moving least squares type of discretization computes the coefficients to the polynomial basis by inverting the mass matrix\n",
-    "`\n",
     "\\begin{equation}\n",
     "\\{\\mathbf{c}(y)\\} = [\\mathbf{M}(y)]^{-1} \\{\\mathbf{P}(0)\\}\n",
     "\\end{equation}\n",
-    "`\n",
     "This can't be done analytically in the general case, so our RKPM library inserts calls to the GNU Scientific Library as injected C code in the Popcorn AST. The kernel first computes the moment matrix around $y$ and takes the LU decomposition of it. We'll be computing multiple $c(y)$.\n",
     "\n",
     "The final shape function for a node in the support is given by\n",
-    "\\begin{equation}\n",
+    "$$\n",
     "N_I(y) = W\\left(\\frac{\\left|\\mathbf{r}_I\\right|}{S}\\right) \\sum_{i=1}^{poly} c_i(\\mathbf{r}_I) P_i(\\mathbf{r}_I)\n",
-    "\\end{equation}"
+    "$$\n"
    ]
   },
   {
@@ -291,9 +289,9 @@
    },
    "source": [
     "Even to get the value at the nodes, we need to perform the basis function interpolation: \n",
-    "\\begin{equation}\n",
+    "$$\n",
     "u(y) = \\sum_{I=1}^{N} N_{I}(y) u_I\n",
-    "\\end{equation}"
+    "$$"
    ]
   },
   {
@@ -338,9 +336,9 @@
     "## Solving a variational form\n",
     "\n",
     "Now define some field $u$ with a test $\\delta u$. The functional we are solving is a weak form equation\n",
-    "\\begin{equation}\n",
+    "$$\n",
     "0= \\int_\\Omega \\nabla \\delta u \\cdot \\nabla u + \\delta u f \\,\\mathrm{d}x \\quad \\forall \\delta u\n",
-    "\\end{equation}\n",
+    "$$\n",
     "We create two popcorn field objects and use them to symbolically create the potential density $P$:"
    ]
   },
@@ -380,17 +378,46 @@
    },
    "source": [
     "To minimize this potential and then linearize it, we need to compute the load vector and the tangent matrix for the discrete unknowns. The system contributions for each coefficient is obtained by taking the Gateaux derivatives against the shape functions,\n",
-    "\\begin{equation}\n",
+    "$$\n",
     "R_ I = \\frac{\\partial P}{\\partial \\delta u}\\frac{\\partial \\delta u}{\\partial a_I} + \n",
     "    \\frac{\\partial P}{\\partial \\nabla\\delta u}\\cdot\\frac{\\partial \\nabla\\delta u}{\\partial a_I} \\\\\n",
     "    = \\frac{\\partial P}{\\partial \\delta u} N_I + \n",
-    "    \\frac{\\partial P}{\\partial \\nabla\\delta u}\\cdot\\nabla N_I\n",
-    "\\end{equation}\n",
+    "    \\frac{\\partial P}{\\partial \\nabla\\delta u}\\cdot\\nabla N_ I\n",
+    "$$\n",
     "and\n",
-    "\\begin{equation}\n",
-    "K_{IJ} = \\frac{\\partial R_I}{\\partial u}\\frac{\\partial u}{\\partial u_J} + \n",
-    "    \\frac{\\partial R_I}{\\partial \\nabla u}\\cdot\\frac{\\partial \\nabla u}{\\partial u_J}\n",
-    "\\end{equation}"
+    "$$\n",
+    "K_ {IJ} = \\frac{\\partial R_I}{\\partial u}\\frac{\\partial u}{\\partial u_J} + \n",
+    "    \\frac{\\partial R_I}{\\partial \\nabla u}\\cdot\\frac{\\partial \\nabla u}{\\partial u_ J}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAArkAAAAXCAMAAAA4CacxAAAAM1BMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADxgEwMAAAAEHRSTlMAVO8Qq5l2zWbd\niTIiu0QgvJW7qAAAAAlwSFlzAAAOxAAADsQBlSsOGwAACBxJREFUaAXtm9u6oyoMgLEoKh627/+0\nOwcCEaqlre361sx40aIEQ/4EDNQa81cd85CZ68Z+yi7VnA79uNbIocxeRWg5zLXNvyN3FZiK3j7D\n7il4tvODz7xpl9tY0adLRD6pf17yLnoKwLnrliWzWUu6dtv6DoMtlrihFjoqs2Qyi8/bp0M33SFp\nusoxL4KJNBSY1LnDUj07k4vu4TU3q5T0jTF2zLn2nRK5uPg9/X1uFpOxLVjkt7NZdOvF6FDKkUp1\n+c2SCSuf23jDsoVc+QVgEhejimJA9i321LOLkbtvSvBs27Wbitzhhup8znWDeL7maNzuPt/UP5TD\njyC2ZP+NLN91Lp6smw9lKdXTJ0mFNbT0ew7G/EYwQgPgqGJAtTdIObqencwsMUb38JyO3AXnH9Po\nS9QtFdyhYy9+7e3Bm3xNf/EkgSGKEy2nQu12nC+kCVlK9fRJUmENLW0+UH4jGKEBEFURnQpHYZA4\nup5dnHOzpgGeXCV1G0Xums2x/ro0t7BnH7kf1D/fMYIg9jROdeRO2YTYbwQHPqRUT58klVnSss+y\nk98A5phLBCOgPhq5huHpyLUbPVHXzZnVt3b1/FDDNLdxLUxKq1/myTl4wEL9PEMJJd2SuSH1Py+d\nO+iT+l1IFix0el4dWSZhBL0c1XOmofGbup5yOCmphkkslqzrMPZnXEGgpDIrTiM+y13eA/OOX+rB\nHHO5k+YWBkmgnbMzOTykmjdleHIVJWZO6Cb48maBZUWPDzULU7Cb1w32lLxpR8h5/YL1C7jHbg5c\n0+hn35hWQkOxtCvsib36tP6Ft8QspKzD6MyIuXyCmPI0583UmVUFLw5kPmIpNQw1uy/PQBxO1Sip\nsEaVQ7aWeA9MjV/A5LhE1Y6pBHPGBdJcQRRBFAZJoJ2zg8CiaIrw8IZ5U4YnV1Fi5jkXIndqzAjO\nWzH5g7TXWWPB8zPEMrp02LAe2bNThvg4hUu09wRzGq1q8o2owp7YK2h5oX4zcWQk/Tji4PA4D8L8\n2qAXE0Q0lg/b9fCs0Q9zH1PgWEoNpZn6Bkodal9QOUcuTbA4IUSVTZa8vAWmyi/sGN8tHa5angZz\nxgWIFquEwiAJtFN2GGJ7eAg2b8rw5CpKpMcaRGrcJ+o4nrHeGEqB/fZfqOfFXJs4MJMBfETPllTh\nezzGG33FOEm9ulT/1LUcGUn/jTMa9FovVyPETj+7YZuUZbFLcEhyq0qxobH9GI/wswaouOEURPMQ\nSiasKXKnONgvAFPlFwpWDwO2pWFFpuFHNZhjLgoR3PDAIAm0U3YYYnt42MW8KcOTqyhheCnRYHg2\nEe3YOkwM6FgpHVwgO+D6jgKEdAUJAkS/MaGoxIhUFiMx9ookrtIP3TuIXFQTH20CUVI96sO6+Dba\nS+LRiE1K0pAalB9EaaJ5iCSVWdIyRS43fxNMhV/YMRC50wYfYkmMXLJU3Cy91GBOuJgIJrEoDJJA\nk3sn0X0phwe1edM7kUsPOEgGIOZozsZ74uQ7ywRM2ww0h3D9iDnBCiigRTiAiSWn3SD+EyCuLeyJ\nvaL6i/TDvYrIDdkCVHFIob4AscEZd8b0AQ4/zhOmjXwGnymHS6UH9ImNo+SfJJVZ0nJNCkjTm2Aq\n/MKRS2k3fCTHVII54aIQRWqv74rl8OCWeeQyPLlKOnnLnNreKE+Fq5jE4iKNzmnJNeCimeo5pQB5\nSE/A6c7BoAUmNKrNCJlxAkT3L+2JvbpSP9yriNywEGksaIR6yNwlcmFBhhdC5EJxhQtpJKYcTpV2\n6QQ23x20f8ubuBSpCqtE7nMrNKPucNcxFX6JvqAMLzmmHswRl3tpbulpCTQhsCOmTnJ4UJU33a3Q\nLG/44AC0N0i34yxrKImFSZQiFx8LU6rnpVmPWxGwsbRCVYhcdDys4CMt6dnh1HKpftBWRC7vpOBW\n9QKRy++YEMR59N5LXkz93O/+jCltiqUH9DugRHsxMjgiVpnmTScTQyDzJpgKv0RfoF/iCfSQBm4N\nmCMusKUYrFBfhUF5+CnZXbGAV0Yuwuva29a3uGHEq2sL8yZu3Jr0NKMxCTuUGIzrtjpHL5+ECZuW\nWk03QBPUaOEbYxszKcq04WR35PZ8Rj+oLCKXO2xb52DHcOAtMgrAfqMje3qHXs8tVLcYZakEJw8i\n17bedcQgSEassWX+ktp7YGr8IsHKkZoc8xIYRUMVAzT6ygxKjn7AzhTwyqY5PK33oHz2axqmtXhg\nAFOei7lxAsSVmT18sf6zUj/csIhcc/Trb732JPmIPkhSylXGeGhZ/KL3HpgaLsEX4fUN5ZgrwSRE\nhwZVsHsWXtJ6WCp+WVCSPMdwsB7uLdiUTaqm1cVa/fci9+iNm2rlSvCcPm47yaZiLhnOizdu3gNT\nw4Ujd4XnB+7Sq8i9EkxidGhQTiQ1odIr8LJb3DnFhdrhQZv3kDMhE9xNyfZzD9s9UVGtH7Tzz3rK\nQWYpRs0DiMc9O29IS9OwwZRL8nnNW47H2ouaKi7kmKlvmmaBxO9DYIqulRdyIpnER+A149YHh2Tq\n8HTu3IDJMDHxnc9+qrnT4tlL9frnbtzglYq9g45eoH62GyB/Th/XArhWwCOX5PNyELH0a591XMgx\nN8rpQY2O3AvBVBiQE8mafBueUq+Z7AApmU8Wj/Xf+dPKKBH2TI/c+My/ebSK0PJn/s3zeTAVEJ9h\nB//m+Sq8Y0AVhl0g8tP6LzDhM7f4B+YB158G9NP6H+D5uep/YB6wP3iZ7kGr66p/Wv91llx8pz8J\nzP8rh2Rft1DONAAAAABJRU5ErkJggg==\n",
+      "text/latex": [
+       "$$1.0 rkpm_{c[0]} + 1.0 rkpm_{c[1]} \\left(x[2*II] - y[0]\\right) + 1.0 rkpm_{c[2]} \\left(x[2*II + 1] - y[1]\\right)$$"
+      ],
+      "text/plain": [
+       "1.0⋅rkpm_c[0] + 1.0⋅rkpm_c[1]⋅(x[2*II] - y[0]) + 1.0⋅rkpm_c[2]⋅(x[2*II + 1] - \n",
+       "y[1])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RKPM.NI"
    ]
   },
   {
@@ -492,7 +519,8 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": false
    },
    "outputs": [
     {
