--- a/examples/rkpm/rkpm_kernel_walkthrough.ipynb
+++ b/examples/rkpm/rkpm_kernel_walkthrough.ipynb
@@ -389,7 +389,7 @@
     {
      "data": {
       "text/plain": [
-       "<popcorn.Kernel.Kernel instance at 0x7f8030ecee18>"
+       "<popcorn.Kernel.Kernel instance at 0x7f8e565594d0>"
       ]
      },
      "execution_count": 8,
@@ -525,7 +525,7 @@
    "outputs": [],
    "source": [
     "R = gateaux(P, tu,   Matrix([RKPM.NI]),RKPM.grad_NI)\n",
-    "R.simplify()\n",
+    "#R.simplify()\n",
     "K = gateaux(R,  u,   Matrix([RKPM.NJ]),RKPM.grad_NJ)"
    ]
   },
@@ -541,7 +541,7 @@
     {
      "data": {
       "text/plain": [
-       "<popcorn.Kernel.Kernel instance at 0x7f80308445f0>"
+       "<popcorn.Kernel.Kernel instance at 0x7f8e56589950>"
       ]
      },
      "execution_count": 12,
@@ -578,8 +578,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defined in rkpm lib are set of polynomials $P(x,y)$ and weight functions $w(r)$:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -633,6 +640,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for i,Po in Polys.iteritems():\n",
+    "    for n,W in Weights.iteritems():\n",
+    "        for grad in [\"Sync\",\"MLS\"]:\n",
+    "            prefix = \"rk_P{0}_W{1}_G{2}_\".format(i,n,grad)\n",
+    "            RKPM = RKPM_Basis(i_x,i_y.as_matrix(),i_sup[0],\n",
+    "                              Po,W,grad)\n",
+    "            RKPM.Interpolate(prefix+\"interp_u\",\n",
+    "                             i_u,o_uy)\n",
+    "            RKPM.Integral(prefix+\"poisson\",i_w[0]*P, tu,u,\n",
+    "                          i_u,PtSca, make_K=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
@@ -646,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -658,8 +685,120 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "Note that we just generated this many lines of code:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    205 husk_rkpm/rk_P1_Wconst_GMLS_interp_u.c\r\n",
+      "    231 husk_rkpm/rk_P1_Wconst_GMLS_poisson.c\r\n",
+      "    195 husk_rkpm/rk_P1_Wconst_GSync_interp_u.c\r\n",
+      "    221 husk_rkpm/rk_P1_Wconst_GSync_poisson.c\r\n",
+      "    207 husk_rkpm/rk_P1_Wcubic_GMLS_interp_u.c\r\n",
+      "    233 husk_rkpm/rk_P1_Wcubic_GMLS_poisson.c\r\n",
+      "    197 husk_rkpm/rk_P1_Wcubic_GSync_interp_u.c\r\n",
+      "    223 husk_rkpm/rk_P1_Wcubic_GSync_poisson.c\r\n",
+      "    511 husk_rkpm/rk_P1_Wcubicspline_GMLS_interp_u.c\r\n",
+      "    993 husk_rkpm/rk_P1_Wcubicspline_GMLS_poisson.c\r\n",
+      "    277 husk_rkpm/rk_P1_Wcubicspline_GSync_interp_u.c\r\n",
+      "    503 husk_rkpm/rk_P1_Wcubicspline_GSync_poisson.c\r\n",
+      "    207 husk_rkpm/rk_P1_WquarticA_GMLS_interp_u.c\r\n",
+      "    233 husk_rkpm/rk_P1_WquarticA_GMLS_poisson.c\r\n",
+      "    197 husk_rkpm/rk_P1_WquarticA_GSync_interp_u.c\r\n",
+      "    223 husk_rkpm/rk_P1_WquarticA_GSync_poisson.c\r\n",
+      "    207 husk_rkpm/rk_P1_WquarticB_GMLS_interp_u.c\r\n",
+      "    233 husk_rkpm/rk_P1_WquarticB_GMLS_poisson.c\r\n",
+      "    197 husk_rkpm/rk_P1_WquarticB_GSync_interp_u.c\r\n",
+      "    223 husk_rkpm/rk_P1_WquarticB_GSync_poisson.c\r\n",
+      "    241 husk_rkpm/rk_P2_Wconst_GMLS_interp_u.c\r\n",
+      "    267 husk_rkpm/rk_P2_Wconst_GMLS_poisson.c\r\n",
+      "    231 husk_rkpm/rk_P2_Wconst_GSync_interp_u.c\r\n",
+      "    257 husk_rkpm/rk_P2_Wconst_GSync_poisson.c\r\n",
+      "    243 husk_rkpm/rk_P2_Wcubic_GMLS_interp_u.c\r\n",
+      "    269 husk_rkpm/rk_P2_Wcubic_GMLS_poisson.c\r\n",
+      "    233 husk_rkpm/rk_P2_Wcubic_GSync_interp_u.c\r\n",
+      "    259 husk_rkpm/rk_P2_Wcubic_GSync_poisson.c\r\n",
+      "   1547 husk_rkpm/rk_P2_Wcubicspline_GMLS_interp_u.c\r\n",
+      "   2541 husk_rkpm/rk_P2_Wcubicspline_GMLS_poisson.c\r\n",
+      "    529 husk_rkpm/rk_P2_Wcubicspline_GSync_interp_u.c\r\n",
+      "    947 husk_rkpm/rk_P2_Wcubicspline_GSync_poisson.c\r\n",
+      "    243 husk_rkpm/rk_P2_WquarticA_GMLS_interp_u.c\r\n",
+      "    269 husk_rkpm/rk_P2_WquarticA_GMLS_poisson.c\r\n",
+      "    233 husk_rkpm/rk_P2_WquarticA_GSync_interp_u.c\r\n",
+      "    259 husk_rkpm/rk_P2_WquarticA_GSync_poisson.c\r\n",
+      "    243 husk_rkpm/rk_P2_WquarticB_GMLS_interp_u.c\r\n",
+      "    269 husk_rkpm/rk_P2_WquarticB_GMLS_poisson.c\r\n",
+      "    233 husk_rkpm/rk_P2_WquarticB_GSync_interp_u.c\r\n",
+      "    259 husk_rkpm/rk_P2_WquarticB_GSync_poisson.c\r\n",
+      "    205 husk_rkpm/rk_P1_Wconst_GMLS_interp_u.c\r\n",
+      "    231 husk_rkpm/rk_P1_Wconst_GMLS_poisson.c\r\n",
+      "    195 husk_rkpm/rk_P1_Wconst_GSync_interp_u.c\r\n",
+      "    221 husk_rkpm/rk_P1_Wconst_GSync_poisson.c\r\n",
+      "    207 husk_rkpm/rk_P1_Wcubic_GMLS_interp_u.c\r\n",
+      "    233 husk_rkpm/rk_P1_Wcubic_GMLS_poisson.c\r\n",
+      "    197 husk_rkpm/rk_P1_Wcubic_GSync_interp_u.c\r\n",
+      "    223 husk_rkpm/rk_P1_Wcubic_GSync_poisson.c\r\n",
+      "    511 husk_rkpm/rk_P1_Wcubicspline_GMLS_interp_u.c\r\n",
+      "    993 husk_rkpm/rk_P1_Wcubicspline_GMLS_poisson.c\r\n",
+      "    277 husk_rkpm/rk_P1_Wcubicspline_GSync_interp_u.c\r\n",
+      "    503 husk_rkpm/rk_P1_Wcubicspline_GSync_poisson.c\r\n",
+      "    207 husk_rkpm/rk_P1_WquarticA_GMLS_interp_u.c\r\n",
+      "    233 husk_rkpm/rk_P1_WquarticA_GMLS_poisson.c\r\n",
+      "    197 husk_rkpm/rk_P1_WquarticA_GSync_interp_u.c\r\n",
+      "    223 husk_rkpm/rk_P1_WquarticA_GSync_poisson.c\r\n",
+      "    207 husk_rkpm/rk_P1_WquarticB_GMLS_interp_u.c\r\n",
+      "    233 husk_rkpm/rk_P1_WquarticB_GMLS_poisson.c\r\n",
+      "    197 husk_rkpm/rk_P1_WquarticB_GSync_interp_u.c\r\n",
+      "    223 husk_rkpm/rk_P1_WquarticB_GSync_poisson.c\r\n",
+      "    241 husk_rkpm/rk_P2_Wconst_GMLS_interp_u.c\r\n",
+      "    267 husk_rkpm/rk_P2_Wconst_GMLS_poisson.c\r\n",
+      "    231 husk_rkpm/rk_P2_Wconst_GSync_interp_u.c\r\n",
+      "    257 husk_rkpm/rk_P2_Wconst_GSync_poisson.c\r\n",
+      "    243 husk_rkpm/rk_P2_Wcubic_GMLS_interp_u.c\r\n",
+      "    269 husk_rkpm/rk_P2_Wcubic_GMLS_poisson.c\r\n",
+      "    233 husk_rkpm/rk_P2_Wcubic_GSync_interp_u.c\r\n",
+      "    259 husk_rkpm/rk_P2_Wcubic_GSync_poisson.c\r\n",
+      "   1547 husk_rkpm/rk_P2_Wcubicspline_GMLS_interp_u.c\r\n",
+      "   2541 husk_rkpm/rk_P2_Wcubicspline_GMLS_poisson.c\r\n",
+      "    529 husk_rkpm/rk_P2_Wcubicspline_GSync_interp_u.c\r\n",
+      "    947 husk_rkpm/rk_P2_Wcubicspline_GSync_poisson.c\r\n",
+      "    243 husk_rkpm/rk_P2_WquarticA_GMLS_interp_u.c\r\n",
+      "    269 husk_rkpm/rk_P2_WquarticA_GMLS_poisson.c\r\n",
+      "    233 husk_rkpm/rk_P2_WquarticA_GSync_interp_u.c\r\n",
+      "    259 husk_rkpm/rk_P2_WquarticA_GSync_poisson.c\r\n",
+      "    243 husk_rkpm/rk_P2_WquarticB_GMLS_interp_u.c\r\n",
+      "    269 husk_rkpm/rk_P2_WquarticB_GMLS_poisson.c\r\n",
+      "    233 husk_rkpm/rk_P2_WquarticB_GSync_interp_u.c\r\n",
+      "    259 husk_rkpm/rk_P2_WquarticB_GSync_poisson.c\r\n",
+      "  30576 total\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wc -l husk_rkpm/rk_*.c husk_rkpm/rk_*.c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -683,6 +822,86 @@
       "Makefile\n",
       "poisson_0.c\n",
       "poisson_0.h\n",
+      "rk_P1_Wconst_GMLS_interp_u.c\n",
+      "rk_P1_Wconst_GMLS_interp_u.h\n",
+      "rk_P1_Wconst_GMLS_poisson.c\n",
+      "rk_P1_Wconst_GMLS_poisson.h\n",
+      "rk_P1_Wconst_GSync_interp_u.c\n",
+      "rk_P1_Wconst_GSync_interp_u.h\n",
+      "rk_P1_Wconst_GSync_poisson.c\n",
+      "rk_P1_Wconst_GSync_poisson.h\n",
+      "rk_P1_Wcubic_GMLS_interp_u.c\n",
+      "rk_P1_Wcubic_GMLS_interp_u.h\n",
+      "rk_P1_Wcubic_GMLS_poisson.c\n",
+      "rk_P1_Wcubic_GMLS_poisson.h\n",
+      "rk_P1_Wcubic_GSync_interp_u.c\n",
+      "rk_P1_Wcubic_GSync_interp_u.h\n",
+      "rk_P1_Wcubic_GSync_poisson.c\n",
+      "rk_P1_Wcubic_GSync_poisson.h\n",
+      "rk_P1_Wcubicspline_GMLS_interp_u.c\n",
+      "rk_P1_Wcubicspline_GMLS_interp_u.h\n",
+      "rk_P1_Wcubicspline_GMLS_poisson.c\n",
+      "rk_P1_Wcubicspline_GMLS_poisson.h\n",
+      "rk_P1_Wcubicspline_GSync_interp_u.c\n",
+      "rk_P1_Wcubicspline_GSync_interp_u.h\n",
+      "rk_P1_Wcubicspline_GSync_poisson.c\n",
+      "rk_P1_Wcubicspline_GSync_poisson.h\n",
+      "rk_P1_WquarticA_GMLS_interp_u.c\n",
+      "rk_P1_WquarticA_GMLS_interp_u.h\n",
+      "rk_P1_WquarticA_GMLS_poisson.c\n",
+      "rk_P1_WquarticA_GMLS_poisson.h\n",
+      "rk_P1_WquarticA_GSync_interp_u.c\n",
+      "rk_P1_WquarticA_GSync_interp_u.h\n",
+      "rk_P1_WquarticA_GSync_poisson.c\n",
+      "rk_P1_WquarticA_GSync_poisson.h\n",
+      "rk_P1_WquarticB_GMLS_interp_u.c\n",
+      "rk_P1_WquarticB_GMLS_interp_u.h\n",
+      "rk_P1_WquarticB_GMLS_poisson.c\n",
+      "rk_P1_WquarticB_GMLS_poisson.h\n",
+      "rk_P1_WquarticB_GSync_interp_u.c\n",
+      "rk_P1_WquarticB_GSync_interp_u.h\n",
+      "rk_P1_WquarticB_GSync_poisson.c\n",
+      "rk_P1_WquarticB_GSync_poisson.h\n",
+      "rk_P2_Wconst_GMLS_interp_u.c\n",
+      "rk_P2_Wconst_GMLS_interp_u.h\n",
+      "rk_P2_Wconst_GMLS_poisson.c\n",
+      "rk_P2_Wconst_GMLS_poisson.h\n",
+      "rk_P2_Wconst_GSync_interp_u.c\n",
+      "rk_P2_Wconst_GSync_interp_u.h\n",
+      "rk_P2_Wconst_GSync_poisson.c\n",
+      "rk_P2_Wconst_GSync_poisson.h\n",
+      "rk_P2_Wcubic_GMLS_interp_u.c\n",
+      "rk_P2_Wcubic_GMLS_interp_u.h\n",
+      "rk_P2_Wcubic_GMLS_poisson.c\n",
+      "rk_P2_Wcubic_GMLS_poisson.h\n",
+      "rk_P2_Wcubic_GSync_interp_u.c\n",
+      "rk_P2_Wcubic_GSync_interp_u.h\n",
+      "rk_P2_Wcubic_GSync_poisson.c\n",
+      "rk_P2_Wcubic_GSync_poisson.h\n",
+      "rk_P2_Wcubicspline_GMLS_interp_u.c\n",
+      "rk_P2_Wcubicspline_GMLS_interp_u.h\n",
+      "rk_P2_Wcubicspline_GMLS_poisson.c\n",
+      "rk_P2_Wcubicspline_GMLS_poisson.h\n",
+      "rk_P2_Wcubicspline_GSync_interp_u.c\n",
+      "rk_P2_Wcubicspline_GSync_interp_u.h\n",
+      "rk_P2_Wcubicspline_GSync_poisson.c\n",
+      "rk_P2_Wcubicspline_GSync_poisson.h\n",
+      "rk_P2_WquarticA_GMLS_interp_u.c\n",
+      "rk_P2_WquarticA_GMLS_interp_u.h\n",
+      "rk_P2_WquarticA_GMLS_poisson.c\n",
+      "rk_P2_WquarticA_GMLS_poisson.h\n",
+      "rk_P2_WquarticA_GSync_interp_u.c\n",
+      "rk_P2_WquarticA_GSync_interp_u.h\n",
+      "rk_P2_WquarticA_GSync_poisson.c\n",
+      "rk_P2_WquarticA_GSync_poisson.h\n",
+      "rk_P2_WquarticB_GMLS_interp_u.c\n",
+      "rk_P2_WquarticB_GMLS_interp_u.h\n",
+      "rk_P2_WquarticB_GMLS_poisson.c\n",
+      "rk_P2_WquarticB_GMLS_poisson.h\n",
+      "rk_P2_WquarticB_GSync_interp_u.c\n",
+      "rk_P2_WquarticB_GSync_interp_u.h\n",
+      "rk_P2_WquarticB_GSync_poisson.c\n",
+      "rk_P2_WquarticB_GSync_poisson.h\n",
       "rkpm_lib.py\n",
       "rkpm_lib.pyc\n",
       "_rkpm_lib.so\n",
